# museu

./: .gitignore
admin/: .gitignore  package-lock.json  package.json
admin/src/: App.tsx  index.css  index.tsx
admin/src/models/: LoginResponse.ts
admin/src/pages/colecoes/: index.tsx
admin/src/pages/curadores/: index.tsx
admin/src/pages/dashboard/: dashboard.css  index.tsx
admin/src/pages/exibicoes/: index.tsx
admin/src/pages/login/: index.tsx  login.css
admin/src/pages/pecas/: index.tsx
admin/src/routes/: PrivateRoute.tsx
admin/src/services/: AbstractService.ts  AuthService.ts
api/: README.md  application.py  config.py  pyproject.toml
api/SCRIPTS_DATABASE/: CREATE_TABLES.sql
api/app/: __init__.py
api/app/controllers/: auth_controller.py  collection_controller.py  exhibition_controller.py  piece_controller.py
api/app/middleware/: cors_middleware.py  jwt_middleware.py
api/app/repositories/: collection_repository.py  curator_repository.py  exhibition_repository.py  piece_repository.py
api/app/services/: authenticate_service.py  collection_service.py  exhibition_service.py  piece_service.py
api/app/utils/: jwt_helper.py
api/database/: connections.py  mysql_connection.py
